Regression: Metaballs have jagged normals in 3.4 #103021

Closed
opened 2022-12-08 11:04:09 +01:00 by Santeri Salmi · 12 comments

System Information
Operating system: macOS-12.5.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: a95bf1ac01
Worked: (3.3)

Caused by: eaa87101cd

Short description of error
Metaballs have jagged edges on refractions in Cycles.

Exact steps for others to reproduce the error
Use Glass BSDF in Cycles. In the example you can see Icosphere on the left and Metaball on the right side.

Blender_3.4_Metaballs_Refraction_Bug.png

Metaballs 3.4.blend

**System Information** Operating system: macOS-12.5.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: `a95bf1ac01` Worked: (3.3) Caused by: eaa87101cd **Short description of error** Metaballs have jagged edges on refractions in Cycles. **Exact steps for others to reproduce the error** Use Glass BSDF in Cycles. In the example you can see Icosphere on the left and Metaball on the right side. ![Blender_3.4_Metaballs_Refraction_Bug.png](https://archive.blender.org/developer/F14044545/Blender_3.4_Metaballs_Refraction_Bug.png) [Metaballs 3.4.blend](https://archive.blender.org/developer/F14044544/Metaballs_3.4.blend)
Author

Added subscriber: @Daunt

Added subscriber: @Daunt
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Bisecting.

Bisecting.
Omar Emara changed title from Metaballs / Jagged Refractions to Regression: Metaballs have jagged refractions in 3.4 2022-12-08 12:56:31 +01:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Caused by eaa87101cd.

Caused by eaa87101cd5a20e577748bfff95b7cb06b04dd4b.
Omar Emara changed title from Regression: Metaballs have jagged refractions in 3.4 to Regression: Metaballs have jagged normals in 3.4 2022-12-08 13:03:16 +01:00

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Hans Goudey self-assigned this 2022-12-08 14:49:06 +01:00
Hans Goudey removed their assignment 2022-12-14 19:15:48 +01:00
Member

I'm not quite sure about what to do about this. The normals are retrieved directly from the metaball tessellation algorithm, so theoretically they're correct.
Maybe it's the way they're interpolated that has changed. Either way, since I don't have an immediate solution, I'll un-claim this for now.

The normals do seem fine when the resolution is lower anyway.

I'm not quite sure about what to do about this. The normals are retrieved directly from the metaball tessellation algorithm, so theoretically they're correct. Maybe it's the way they're interpolated that has changed. Either way, since I don't have an immediate solution, I'll un-claim this for now. The normals do seem fine when the resolution is lower anyway.
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-02-08 03:20:11 +01:00
Philipp Oeser removed the
Interest
Render & Cycles
label 2023-02-09 14:04:29 +01:00
Brecht Van Lommel added this to the Render & Cycles project 2023-02-09 19:38:52 +01:00
Hans Goudey was assigned by Brecht Van Lommel 2023-02-15 10:15:11 +01:00
Brecht Van Lommel added this to the 3.5 milestone 2023-02-15 10:15:16 +01:00
Member

I looked into this again today and I'm still not sure what's causing the change. The normals themselves are only ever calculated by the metaball tessellation algorithm in this file, so theoretically they should be correct. However, I made a small test file to show that they aren't actually-- the normals for the sphere don't line up correctly with its center (which I assume is the goal?).

image

Anyway, the next thing I'll try is looking through eaa87101cd again to try to spot any problems with the code.

I looked into this again today and I'm still not sure what's causing the change. The normals themselves are only ever calculated by the metaball tessellation algorithm in this file, so _theoretically_ they should be correct. However, I made a small test file to show that they aren't actually-- the normals for the sphere don't line up correctly with its center (which I assume is the goal?). ![image](/attachments/db7aa806-3e9a-4a3b-8f6c-70f0eb88b3d8) Anyway, the next thing I'll try is looking through eaa87101cd5a20e577748bfff95b7cb06b04dd4b again to try to spot any problems with the code.

This is still scheduled for 3.5 and we are one week away from Bcon4. Any updates here?

This is still scheduled for 3.5 and we are one week away from Bcon4. Any updates here?

This is true for all shaders (Principled BSDF too), it seems.

Metaball to Mesh Metaball
image image
This is true for all shaders (Principled BSDF too), it seems. | Metaball to Mesh | Metaball | | -------- | -------- | | ![image](/attachments/a8e5beb4-67c1-4740-8acf-5bee06190454) | ![image](/attachments/23c521d0-f9fe-4276-a467-d1b675a0336f) |
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-15 17:14:39 +01:00
Brecht Van Lommel removed this from the Render & Cycles project 2023-05-24 19:05:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103021
No description provided.